tests/errors/cxx/undefined-reference.cpp
extern int undefined1;
extern int undefined2;

int main() {
    return undefined1 + undefined2;
}
